--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 XenonHD
+<!-- Copyright (C) 2012-2017 ParanoidAndroid Project
 
      Licensed under the GNU GPLv2 license
 
@@ -8,31 +8,25 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.candy.candywrappers" android:versionName="2.0" android:versionCode="2">
-    
-    <uses-permission android:name="android.permission.SET_WALLPAPER" />
-    <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
+    package="org.candy.CandyWrappers"
+    android:versionCode="23"
+    android:versionName="2.3" >
 
-    <uses-sdk
-        android:minSdkVersion="16" android:targetSdkVersion="23" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
-        android:icon="@mipmap/ic_launcher_wallpaper"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        
+        android:theme="@style/AppTheme">
         <activity
-            android:name="Wallpaper"
+            android:name="WallpaperActivity"
             android:label="@string/app_name"
-            android:icon="@mipmap/ic_launcher_wallpaper"
-            android:screenOrientation="nosensor"
-            android:finishOnCloseSystemDialogs="true">
+            android:icon="@drawable/ic_launcher"
+            android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.SET_WALLPAPER" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>  
+        </activity>
     </application>
-
 </manifest>
