--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,23 +8,23 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lox.xtendedwallz" android:versionName="1.1" android:versionCode="2">
+    package="org.candy.candywrappers" android:versionName="2.0" android:versionCode="2">
     
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
-    
+    <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
+
     <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="16" android:targetSdkVersion="23" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher_wallpaper"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <activity
             android:name="Wallpaper"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@mipmap/ic_launcher_wallpaper"
             android:screenOrientation="nosensor"
             android:finishOnCloseSystemDialogs="true">
             <intent-filter>
